# somnus

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  PLAN.md  README.md  alembic.ini  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 000_baseline.py  001_add_last_oura_sync.py  002_add_experiments.py  003_add_redlight_entry_distance.py  004_add_section_absences.py  005_add_supplement_products.py
backend/: config.py  database.py  db_location.py  main.py  models.py  schemas.py  security.py
backend/routers/: analysis.py  daily_log.py  dashboard.py  export.py  oura.py  recommendations.py  reports.py  settings.py  testing.py
backend/science/: reference_data.py
backend/services/: daily_log_service.py  dashboard_service.py  nap_analysis.py  oura_client.py  recommender.py  report_service.py  sleep_timing.py  stats_engine.py  validation.py
backend/tests/: conftest.py  test_analysis_router.py  test_config.py  test_daily_log_router.py  test_daily_log_service.py  test_dashboard.py  test_database.py  test_db_location.py  test_export.py  test_health.py  test_host_validation.py  test_migrations.py  test_nap_analysis.py  test_oura_sync.py  test_recommendations_router.py  test_recommender.py  test_reference_data.py  test_report_service.py  test_reports_router.py  test_review_gate.py  test_schemas.py  test_settings_router.py  test_sleep_timing.py  test_stats_engine.py  test_validation.py
docs/: THREAT_MODEL.md
docs/adr/: 001-use-sqlite.md  002-fastapi-backend.md  003-missing-data-semantics.md  004-circadian-display-mode.md  005-correlation-not-causation.md  006-git-workflow.md  007-soft-warnings-pattern.md  008-frontend-routing-and-form-pattern.md  009-oura-sync-architecture.md  010-analysis-engine-architecture.md  011-recommendation-engine.md  012-reports-architecture.md  013-threat-model-methodology.md  014-dependency-cooldown.md  015-db-location-launcher-prompt.md
docs/process/: review-gate.md
docs/releases/: v0.1.0-acceptance.md  v0.1.1-acceptance.md
docs/reviews/: 2026-07-06-pr44-dependency-cooldown.md  2026-07-06-pr64-t07-encryption-guidance.md
docs/waves/: 2026-07-22-single-17.md  2026-07-22-singles-142-143.md  2026-07-22-wave-1-report.md  2026-07-22-wave-1.md  2026-07-22-wave-2-report.md  2026-07-22-wave-2.md  2026-07-23-v012-supplements-absence.md
frontend/: .npmrc  package-lock.json  package.json  playwright.config.ts  tsconfig.e2e.json  vite.config.ts
frontend/e2e/: daily-log.spec.ts  fixtures.ts  helpers.ts  navigation.spec.ts  onboarding.spec.ts  settings.spec.ts
frontend/src/: App.css  App.test.tsx  App.tsx  bedtime.ts  effectFormat.test.ts  effectFormat.ts  index.css  launchSync.ts  router.test.tsx  router.tsx  syncEvents.ts  (+8 more)
scripts/: review_gate.py
(+252 files in other folders)
